--- a/index.html
+++ b/index.html
@@ -36,17 +36,38 @@
     <div class="flexbox-container">
       <div class="flexboxitem-a"></div>
       <div class="flexboxitem-b">
-        <div class="upper"></div>
-        <div class="lower"></div>
-        <div class="middle"></div>
+        <div class="upper">
+          <p>
+            Shift the overall look and feel by adding these wonderful touches to
+            furniture in your home
+          </p>
+        </div>
+        <div class="middle">
+          <p>
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I've got some simple tips to help
+            you make any room feel complete.
+          </p>
+        </div>
+        <div class="lower">
+          <div class="image">
+            <img src="./images/avatar-michelle.jpg" alt="" class="profile" />
+          </div>
+          <div class="account">
+            <div class="name">
+              <p>Michelle Appleton</p>
+              <p>28 Jun 2020</p>
+            </div>
+            <div class="date"></div>
+          </div>
+          <div class="btn">
+            <button>
+              <img src="./images/icon-share.svg" alt="" class="share" />
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-
-    Shift the overall look and feel by adding these wonderful touches to
-    furniture in your home Ever been in a room and felt like something was
-    missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple
-    tips to help you make any room feel complete. Michelle Appleton 28 Jun 2020
-    Share
 
     <div class="attribution">
       Challenge by
