desktop styles added

--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
       <div class="flexboxitem-a"></div>
       <div class="flexboxitem-b">
         <div class="upper">
-          <p style="font-size: 34px; font-weight: 700">
+          <p
+            style="font-size: 34px; font-weight: 700; color: hsl(217, 19%, 35%)"
+          >
             Shift the overall look and feel by adding these wonderful touches to
             furniture in your home
           </p>
         </div>
         <div class="middle">
-          <p style="font-size: 20px; font-weight: 500">
+          <p
+            style="font-size: 20px; font-weight: 500; color: hsl(214, 17%, 51%)"
+          >
             Ever been in a room and felt like something was missing? Perhaps it
             felt slightly bare and uninviting. I've got some simple tips to help
             you make any room feel complete.
@@ -101,7 +105,7 @@
       const element = document.getElementById("share");
       element.addEventListener("click", () => {
         document.getElementById("share-panel").style.visibility =
-          document.getElementById("share-panel").style.visibility== "hidden"
+          document.getElementById("share-panel").style.visibility == "hidden"
             ? "visible"
             : "hidden";
       });
